# pr-generator-agent

./: .flake8  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-please.yml  release.yml  test.yml
aimr/: __init__.py  main.py
aimr/prompts/: __init__.py  prompts.py
aipr/: __init__.py  commit.py  main.py  providers.py
aipr/prompts/: __init__.py  prompts.py
docs/adr/: 001-provider-architecture.md
tests/: __init__.py  conftest.py  test_commit.py  test_main.py  test_prompts.py
