[project]
name = "aimr"
version = "0.1.0"
description = "Generate merge request descriptions using AI models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "GitPython>=3.1.0",
    "openai[azure]>=1.0.0",  # For both standard and Azure OpenAI support
    "anthropic>=0.3.0",
    "tiktoken>=0.5.0",  # For token counting
]

[tool.uv]
package = true
