[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimr"
version = "0.1.0"
description = "AI-powered Merge Request Description Generator"
authors = [
    {name = "Daniel Scholl", email = "daniel.scholl@microsoft.com"}
]
dependencies = [
    "gitpython>=3.1.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "tiktoken>=0.5.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "build>=1.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
aimr = "aimr.main:main"

[tool.setuptools]
packages = ["aimr"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=aimr --cov-report=term-missing"
